[package]
name = "hubs"
version = "0.1.0"
authors = ["Marco Amann <marco@pfudi.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
criterion = "0.3"

# [[bench]]
# name = "stress_test"
# harness = false

# [[bin]]
# name = "benchy"
# file = "bin/benchy"


[profile.release]
debug = true