[package]
name = "hubs"
version = "0.1.0"
authors = ["Marco Amann <marco@pfudi.de>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "The horribly unsafe buffer structure"
homepage = "https://amann.dev/projects/hubs/"
readme = "README.md"
repository = "https://github.com/dwarfhack/hubs"

[dependencies]

[dev-dependencies]
criterion = "0.3"

# # If you want a bit of benchmarking
# [[bin]]
# name = "benchy"
# file = "bin/benchy"


[profile.release]
debug = true