[package]
name = "hubs"
version = "0.1.1"
authors = ["Marco Amann <marco@pfudi.de>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "The horribly unsafe buffer structure"
documentation = "https://docs.rs/hubs/"
homepage = "https://amann.dev/projects/hubs/"
readme = "README.md"
repository = "https://github.com/dwarfhack/hubs"

[dependencies]

[profile.release]
debug = true
